--- a/AutoML/Example Notebook/AutoML Sample Notebook.ipynb
+++ b/AutoML/Example Notebook/AutoML Sample Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "after-illinois",
+   "id": "disturbed-cameroon",
    "metadata": {},
    "source": [
     "# AWS Marketplace Product Usage Demonstration - Algorithms\n",
@@ -12,14 +12,14 @@
     "This sample notebook demonstrates mAdvisor-AutoML algorithm using Algorithm ARN to run training jobs and use that result for inference.\n",
     "\n",
     "## Compatibility\n",
-    "This notebook is compatible only with [mAdvisor-AutoML](\"URL\") Algorithm published to AWS Marketplace. \n",
+    "This notebook is compatible only with [mAdvisor-AutoML](https://aws.amazon.com/marketplace/pp/prodview-w3icje43u6d7w?qid=1614744243538&sr=0-1&ref_=srh_res_product_title) Algorithm published to AWS Marketplace. \n",
     "\n",
     "***Pre-Requisite:*** Please subscribe to this product before proceeding with this notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "plastic-citizenship",
+   "id": "vulnerable-spirit",
    "metadata": {},
    "source": [
     "## Set up the environment"
@@ -28,24 +28,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unnecessary-contest",
+   "id": "alpine-vegetable",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sagemaker as sage\n",
     "from sagemaker import get_execution_role\n",
     "\n",
-    "role = get_execution_role()\n",
-    "\n",
-    "# S3 prefixes\n",
-    "common_prefix = \"DEMO-mAdvisor-byo-Monster\"\n",
-    "training_input_prefix = common_prefix + \"/training-input-data\"\n",
-    "batch_inference_input_prefix = common_prefix + \"/batch-inference-input-data\""
+    "role = get_execution_role()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "under-strength",
+   "id": "devoted-eleven",
    "metadata": {},
    "source": [
     "### Create the session\n",
@@ -56,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "changed-institution",
+   "id": "entire-terrorist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,20 +60,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressed-classification",
+   "id": "sweet-quarter",
    "metadata": {},
    "source": [
     "## Upload the data for training\n",
     "\n",
-    "When training large models with huge amounts of data, you'll typically use big data tools, like Amazon Athena, AWS Glue, or Amazon EMR, to create your data in S3. For the purposes of this example, we're using some the classic [Iris dataset](https://en.wikipedia.org/wiki/Iris_flower_data_set), which we have included. \n",
-    "\n",
-    "We can use use the tools provided by the Amazon SageMaker Python SDK to upload the data to a default bucket. "
+    "Please upload train and test datasets in S3 bucket and provide respective dataset address as required."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "documented-johnston",
+   "id": "clean-proposition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,32 +81,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-tours",
+   "id": "productive-burning",
    "metadata": {},
    "source": [
     "## Creating Training Job using Algorithm ARN\n",
     "\n",
     "Please put in the algorithm arn you want to use below. This can either be an AWS Marketplace algorithm you subscribed to (or) one of the algorithms you created in your own account.\n",
     "\n",
-    "The algorithm arn listed below belongs to the [\"mAdvisor-AutoML\"](\"AWS market place URL\") product."
+    "The algorithm arn listed below belongs to the [\"mAdvisor-AutoML\"](https://aws.amazon.com/marketplace/pp/prodview-w3icje43u6d7w?qid=1614744243538&sr=0-1&ref_=srh_res_product_title) product."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dental-lincoln",
+   "id": "changing-toddler",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from src.scikit_product_arns import ScikitArnProvider\n",
-    "\n",
     "algorithm_arn = \"Please Provide Alogorithm ARN\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "known-stack",
+   "id": "derived-hunger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gorgeous-bidder",
+   "id": "choice-pickup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,12 +129,12 @@
     "            instance_count=1,\n",
     "            instance_type='ml.c4.xlarge',\n",
     "            hyperparameters=hyperparameters,\n",
-    "            base_job_name='jobname-from-aws-marketplace')"
+    "            base_job_name='mAdvisor-from-aws-marketplace')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "simple-assumption",
+   "id": "dated-cycling",
    "metadata": {},
    "source": [
     "## Run Training Job"
@@ -152,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convinced-editing",
+   "id": "signed-favorite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,24 +153,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lasting-pipeline",
+   "id": "static-target",
    "metadata": {},
    "source": [
     "## Batch Transform Job\n",
     "\n",
-    "Now let's use the model built to run a batch inference job and verify it works.\n",
-    "\n",
-    "### Batch Transform Input Preparation\n",
-    "\n",
-    "The snippet below is removing the \"label\" column (column indexed at 0) and retaining the rest to be batch transform's input. \n",
-    "\n",
-    "***NOTE:*** This is the same training data, which is a no-no from a ML science perspective. But the aim of this notebook is to demonstrate how things work end-to-end."
+    "Now let's use the model built to run a batch inference job and verify it works."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "musical-reader",
+   "id": "republican-superintendent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stopped-patio",
+   "id": "loving-struggle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocational-munich",
+   "id": "loving-examination",
    "metadata": {},
    "source": [
     "#### Inspect the Batch Transform Output in S3"
@@ -212,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "molecular-discharge",
+   "id": "false-crash",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "verified-impossible",
+   "id": "serial-demonstration",
    "metadata": {},
    "outputs": [],
    "source": []
